Associate facility groups with protocols
* Associate facility groups with protocols
* Return protocol id with facility sync api
