# app/schema/api/current/models.rb
@@ -119,9 +119,10 @@ class Api::Current::Models
           state: { '$ref' => '#/definitions/non_empty_string' },
           country: { '$ref' => '#/definitions/non_empty_string' },
           pin: { type: :string },
-          facility_type: { type: :string }
+          facility_type: { type: :string },
+          protocol_id: { '$ref' => '#/definitions/uuid' },
         },
-        required: %w[id name district state country]
+        required: %w[id name district state country protocol_id]
       }
     end
 
