# swagger/current/swagger.json
@@ -1441,6 +1441,9 @@
         },
         "facility_type": {
           "type": "string"
+        },
+        "protocol_id": {
+          "$ref": "#/definitions/uuid"
         }
       },
       "required": [
@@ -1448,7 +1451,8 @@
         "name",
         "district",
         "state",
-        "country"
+        "country",
+        "protocol_id"
       ]
     },
     "facilities": {
